--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-ktp-common-internals (0.3.0-1) UNRELEASED; urgency=low
+ktp-common-internals (0.4.0-0r1) UNRELEASED; urgency=low
 
   * Initial release.
 
