--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-ktp-common-internals (0.4.0-0r1) UNRELEASED; urgency=low
+ktp-common-internals (0.4.0-1) unstable; urgency=low
 
   * Initial release.
 
- -- George Kiagiadakis <kiagiadakis.george@gmail.com>  Sat, 04 Feb 2012 21:22:02 +0200
+ -- George Kiagiadakis <kiagiadakis.george@gmail.com>  Mon, 18 Jun 2012 22:16:51 +0300
