--- a/po/de/ktp-common-internals.po
+++ b/po/de/ktp-common-internals.po
@@ -1,18 +1,18 @@
 # Frederik Schwarzer <schwarzer@kde.org>, 2011, 2012.
-# Burkhard Lück <lueck@hube-lueck.de>, 2012.
+# Burkhard Lück <lueck@hube-lueck.de>, 2012, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: ktp-common-internals\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2012-09-20 12:42+0200\n"
-"PO-Revision-Date: 2012-07-21 20:39+0200\n"
+"PO-Revision-Date: 2013-01-20 20:51+0100\n"
 "Last-Translator: Burkhard Lück <lueck@hube-lueck.de>\n"
 "Language-Team: German <kde-i18n-de@kde.org>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.5\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: error-dictionary.cpp:37
@@ -142,12 +142,9 @@ msgid "You have been kicked from the channel"
 msgstr "Sie sind aus dem Kanal geworfen worden"
 
 #: error-dictionary.cpp:75
-#, fuzzy
-#| msgctxt "Verbose user visible error string"
-#| msgid "An encryption error has occurred"
 msgctxt "Verbose user visible error string"
 msgid "An unexpected error has occurred"
-msgstr "Es ist ein Verschlüsselungsfehler aufgetreten"
+msgstr "Es ist ein unerwarteter Fehler aufgetreten"
 
 #: error-dictionary.cpp:77
 msgctxt "Verbose user visible error string"
@@ -181,12 +178,9 @@ msgstr "Ihre Verbindung ist getrennt worden"
 #: error-dictionary.cpp:87
 msgctxt "Verbose user visible error string"
 msgid "Selected user does not exist"
-msgstr ""
+msgstr "Der ausgewählte Benutzer existiert nicht"
 
 #: error-dictionary.cpp:89
-#, fuzzy
-#| msgctxt "Verbose user visible error string"
-#| msgid "Sorry, emergency calls are not supported"
 msgctxt "Verbose user visible error string"
 msgid "Emergency calls are not supported"
 msgstr "Notrufe werden nicht unterstützt"
@@ -250,13 +244,9 @@ msgid "The requested channel is already being handled by some other process"
 msgstr ""
 
 #: error-dictionary.cpp:113
-#, fuzzy
-#| msgctxt "Verbose user visible error string"
-#| msgid "This operation is unavailable as the contact is offline"
 msgctxt "Verbose user visible error string"
 msgid "This operation is unavailable for offline contacts"
-msgstr ""
-"Diese Aktion kann nicht ausgeführt werden, weil der Kontakt offline ist"
+msgstr "Diese Operation ist für Offline-Kontakte nicht verfügbar"
 
 #: error-dictionary.cpp:115
 msgctxt "Verbose user visible error string"
@@ -301,18 +291,13 @@ msgstr ""
 "Es ist ein interner Fehler aufgetreten (bekannt als „Confused service error“)"
 
 #: error-dictionary.cpp:129
-#, fuzzy
-#| msgctxt "Verbose user visible error string"
-#| msgid ""
-#| "You are using too old software. Please try updating all Telepathy "
-#| "packages to a newer version"
 msgctxt "Verbose user visible error string"
 msgid ""
 "The installed libraries are too old. Please try updating all Telepathy "
 "packages to a newer version"
 msgstr ""
-"Die Softwareversion ist zu alt. Versuchen Sie bitte, die Telepathy-Pakete zu "
-"aktualisieren."
+"Die installierten Bibliotheken sind zu alt. Versuchen Sie bitte, die "
+"Telepathy-Pakete zu aktualisieren."
 
 #: error-dictionary.cpp:131
 msgctxt "Verbose user visible error string"
@@ -320,11 +305,6 @@ msgid "The channel was terminated for no apparent reason"
 msgstr "Der Kanal ist ohne erkennbaren Grund abgebrochen worden"
 
 #: error-dictionary.cpp:133
-#, fuzzy
-#| msgctxt "Verbose user visible error string"
-#| msgid ""
-#| "This operation can not be finished as it would break your anonymity "
-#| "request"
 msgctxt "Verbose user visible error string"
 msgid ""
 "This operation can not be finished as it would break your requested anonymity"
@@ -469,12 +449,9 @@ msgid "Disconnected"
 msgstr "Getrennt"
 
 #: error-dictionary.cpp:194
-#, fuzzy
-#| msgctxt "Short user visible error string"
-#| msgid "You apparently do not exist"
 msgctxt "Short user visible error string"
 msgid "User does not exist"
-msgstr "Sie existieren anscheinend nicht"
+msgstr "Der Benutzer existiert nicht"
 
 #: error-dictionary.cpp:196
 msgctxt "Short user visible error string"
@@ -522,7 +499,7 @@ msgstr "Diese Funktion ist nicht verfügbar"
 #: error-dictionary.cpp:212
 msgctxt "Short user visible error string"
 msgid "Contact has no support"
-msgstr ""
+msgstr "Keine Unterstützung für den Kontakt"
 
 #: error-dictionary.cpp:214
 msgctxt "Short user visible error string"
@@ -552,7 +529,7 @@ msgstr "Diese Aktion ist nicht erlaubt"
 #: error-dictionary.cpp:224
 msgctxt "Short user visible error string"
 msgid "Call picked by other resource"
-msgstr ""
+msgstr "Anruf wurde von anderer Ressource übernommen"
 
 #: error-dictionary.cpp:226
 msgctxt "Short user visible error string"
@@ -652,11 +629,11 @@ msgstr "KDE Telepathy"
 
 #: Widgets/add-contact-dialog.cpp:92
 msgid "Add new contact"
-msgstr ""
+msgstr "Neuen Kontakt hinzufügen"
 
 #: Widgets/add-contact-dialog.cpp:122
 msgid "No account selected."
-msgstr ""
+msgstr "Kein Zugang ausgewählt"
 
 #: Widgets/add-contact-dialog.cpp:124
 msgid ""
@@ -666,11 +643,11 @@ msgstr ""
 
 #: Widgets/add-contact-dialog.cpp:127
 msgid "You did not specify the name of the contact to add."
-msgstr ""
+msgstr "Sie haben keinen Namen für den hinzuzufügenden Kontakt angegeben."
 
 #: Widgets/add-contact-dialog.cpp:153
 msgid "Failed to create new contact."
-msgstr ""
+msgstr "Das Erstellen des neuen Kontakts ist fehlgeschlagen."
 
 #: Widgets/add-contact-dialog.cpp:170
 msgid "Failed to request presence subscription from the requested contact."
@@ -688,7 +665,7 @@ msgstr "Anzeigename:"
 
 #: Widgets/contact-grid-dialog.cpp:139
 msgid "Search in Contacts..."
-msgstr ""
+msgstr "Suche in Kontakten ..."
 
 #~ msgctxt "Verbose user visible error string"
 #~ msgid "Congratulate yourself - you just reached an impossible situation"
