--- a/po/fi/ktp-common-internals.po
+++ b/po/fi/ktp-common-internals.po
@@ -1,9 +1,9 @@
 # Copyright © 2012 This_file_is_part_of_KDE
 # This file is distributed under the same license as the ktp-common-internals package.
 # Tommi Nieminen <translator@legisign.org>, 2012.
-# Lasse Liehu <lasse.liehu@gmail.com>, 2012.
+# Lasse Liehu <lasse.liehu@gmail.com>, 2012, 2013.
 #
-# KDE 4.9 Finnish translation sprint 2012-06/07
+# KDE Finnish translation sprint participants:
 # Author: Artnay
 # Author: Lliehu
 msgid ""
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: ktp-common-internals\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2012-09-20 12:42+0200\n"
-"PO-Revision-Date: 2012-09-26 16:09+0300\n"
+"PO-Revision-Date: 2013-01-27 20:15+0200\n"
 "Last-Translator: Lasse Liehu <lasse.liehu@gmail.com>\n"
 "Language-Team: Finnish <lokalisointi@lists.coss.fi>\n"
 "Language: fi\n"
@@ -19,7 +19,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-POT-Import-Date: 2012-07-19 16:25:13+0000\n"
+"X-POT-Import-Date: 2012-12-01 22:21:13+0000\n"
 "X-Generator: Lokalize 1.5\n"
 
 #: error-dictionary.cpp:37
@@ -492,7 +492,7 @@ msgstr "Piirre ei käytettävissä"
 #: error-dictionary.cpp:212
 msgctxt "Short user visible error string"
 msgid "Contact has no support"
-msgstr ""
+msgstr "Käyttäjää ei tueta"
 
 #: error-dictionary.cpp:214
 msgctxt "Short user visible error string"
@@ -636,7 +636,7 @@ msgstr ""
 
 #: Widgets/add-contact-dialog.cpp:127
 msgid "You did not specify the name of the contact to add."
-msgstr ""
+msgstr "Lisättävän yhteystiedon nimeä ei annettu."
 
 #: Widgets/add-contact-dialog.cpp:153
 msgid "Failed to create new contact."
