--- a/po/gl/ktp-common-internals.po
+++ b/po/gl/ktp-common-internals.po
@@ -2,20 +2,25 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Xosé <xosecalvo@gmail.com>, 2012.
+# Adrian Chaves Fernandez <adriyetichaves@gmail.com>, 2012.
+# Miguel Branco <mgl.branco@gmail.com>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2012-09-20 12:42+0200\n"
-"PO-Revision-Date: 2012-01-29 22:41+0100\n"
-"Last-Translator: Xosé <xosecalvo@gmail.com>\n"
-"Language-Team: Galician <kde-i18n-doc@kde.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2013-01-13 15:58+0100\n"
+"Last-Translator: Miguel Branco <mgl.branco@gmail.com>\n"
+"Language-Team: Galician <proxecto@trasno.net>\n"
+"Language: gl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.5\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Environment: kde\n"
+"X-Accelerator-Marker: &\n"
+"X-Text-Markup: kde4\n"
 
 #: error-dictionary.cpp:37
 msgctxt "Verbose user visible error string"
@@ -29,7 +34,7 @@ msgstr ""
 #: error-dictionary.cpp:39
 msgctxt "Verbose user visible error string"
 msgid "Authentication of your account failed (is your password correct?)"
-msgstr "Fallou a atenticación da súa conta (está ben o contrasinal?)"
+msgstr "Fallou a autenticación da súa conta (está ben o contrasinal?)"
 
 #: error-dictionary.cpp:41
 msgctxt "Verbose user visible error string"
@@ -139,12 +144,9 @@ msgid "You have been kicked from the channel"
 msgstr "Foi expulsado da canle"
 
 #: error-dictionary.cpp:75
-#, fuzzy
-#| msgctxt "Verbose user visible error string"
-#| msgid "An encryption error has occurred"
 msgctxt "Verbose user visible error string"
 msgid "An unexpected error has occurred"
-msgstr "Houbo un erro de cifrado"
+msgstr "Produciuse un erro inesperado."
 
 #: error-dictionary.cpp:77
 msgctxt "Verbose user visible error string"
@@ -178,15 +180,12 @@ msgstr "Foi desconectado."
 #: error-dictionary.cpp:87
 msgctxt "Verbose user visible error string"
 msgid "Selected user does not exist"
-msgstr ""
+msgstr "O usuario seleccionado non existe."
 
 #: error-dictionary.cpp:89
-#, fuzzy
-#| msgctxt "Verbose user visible error string"
-#| msgid "Sorry, emergency calls are not supported"
 msgctxt "Verbose user visible error string"
 msgid "Emergency calls are not supported"
-msgstr "Desculpe, non se permiten as chamadas de emerxencia"
+msgstr "Non se poden realizar chamadas de emerxencia."
 
 #: error-dictionary.cpp:91
 msgctxt "Verbose user visible error string"
@@ -244,12 +243,9 @@ msgid "The requested channel is already being handled by some other process"
 msgstr "A canle solicitade xa está a ser xestionada po outro proceso"
 
 #: error-dictionary.cpp:113
-#, fuzzy
-#| msgctxt "Verbose user visible error string"
-#| msgid "This operation is unavailable as the contact is offline"
 msgctxt "Verbose user visible error string"
 msgid "This operation is unavailable for offline contacts"
-msgstr "Esta operación non está dispoñíbel porque o contacto está desconectado"
+msgstr "Esta operación non está dispoñíbel para usuarios desconectados."
 
 #: error-dictionary.cpp:115
 msgctxt "Verbose user visible error string"
@@ -295,18 +291,13 @@ msgid "An internal error has occurred (known as the 'Confused service error')"
 msgstr "Houbo un erro interno (coñecido como «Erro de servizo confundido»)"
 
 #: error-dictionary.cpp:129
-#, fuzzy
-#| msgctxt "Verbose user visible error string"
-#| msgid ""
-#| "You are using too old software. Please try updating all Telepathy "
-#| "packages to a newer version"
 msgctxt "Verbose user visible error string"
 msgid ""
 "The installed libraries are too old. Please try updating all Telepathy "
 "packages to a newer version"
 msgstr ""
-"Está a empregar software vello de máis. Tente actualizando todos os paquetes "
-"do Telepathy a unha versión máis recente"
+"As bibliotecas instaladas son vellas de máis. Probe a actualizar todos os "
+"paquetes de Telepathy a unha versión máis nova."
 
 #: error-dictionary.cpp:131
 msgctxt "Verbose user visible error string"
@@ -314,24 +305,18 @@ msgid "The channel was terminated for no apparent reason"
 msgstr "Fechouse a canle por algunha razón non evidente"
 
 #: error-dictionary.cpp:133
-#, fuzzy
-#| msgctxt "Verbose user visible error string"
-#| msgid ""
-#| "This operation can not be finished as it would break your anonymity "
-#| "request"
 msgctxt "Verbose user visible error string"
 msgid ""
 "This operation can not be finished as it would break your requested anonymity"
 msgstr ""
 "Non é posíbel rematar esta operación porque racharía coa súa solicitude de "
-"anonimato"
+"anonimato."
 
 #: error-dictionary.cpp:135
-#, fuzzy
 msgctxt "Verbose user visible error string"
 msgid "Some of the IM components are not working correctly"
 msgstr ""
-"Algúns dos compoñentes da mensaxaría instantánea non están a funcionar "
+"Algúns dos compoñentes da mensaxería instantánea non están a funcionar "
 "correctamente (e o sistema non nos di cal)"
 
 #: error-dictionary.cpp:137
@@ -466,12 +451,9 @@ msgid "Disconnected"
 msgstr "Desconectado"
 
 #: error-dictionary.cpp:194
-#, fuzzy
-#| msgctxt "Short user visible error string"
-#| msgid "You apparently do not exist"
 msgctxt "Short user visible error string"
 msgid "User does not exist"
-msgstr "Aparentemente, vostede non existe"
+msgstr "O usuario non existe."
 
 #: error-dictionary.cpp:196
 msgctxt "Short user visible error string"
@@ -494,12 +476,9 @@ msgid "Invalid argument"
 msgstr "O argumento é erróneo"
 
 #: error-dictionary.cpp:204
-#, fuzzy
-#| msgctxt "Short user visible error string"
-#| msgid "Invalid argument"
 msgctxt "Short user visible error string"
 msgid "Invalid handle"
-msgstr "O argumento é erróneo"
+msgstr "O argumento é erróneo."
 
 #: error-dictionary.cpp:206
 msgctxt "Short user visible error string"
@@ -519,7 +498,7 @@ msgstr "Esa capacidade non está dispoñíbel"
 #: error-dictionary.cpp:212
 msgctxt "Short user visible error string"
 msgid "Contact has no support"
-msgstr ""
+msgstr "O contacto carece da funcionalidade necesaria."
 
 #: error-dictionary.cpp:214
 msgctxt "Short user visible error string"
@@ -539,7 +518,7 @@ msgstr "A canle xa está a ser xestionada"
 #: error-dictionary.cpp:220
 msgctxt "Short user visible error string"
 msgid "Contact is offline"
-msgstr "O contacto está desligado"
+msgstr "O contacto está desconectado"
 
 #: error-dictionary.cpp:222
 msgctxt "Short user visible error string"
@@ -621,10 +600,9 @@ msgid "Away"
 msgstr "Ausente"
 
 #: presence.cpp:101
-#, fuzzy
 msgctxt "IM presence: a person is not available"
 msgid "Not Available"
-msgstr "Non está dispoñíbel"
+msgstr "Non dispoñíbel"
 
 #: presence.cpp:103
 msgctxt "IM presence: a person is invisible"
@@ -650,61 +628,41 @@ msgstr "Telepathy do KDE"
 
 #: Widgets/add-contact-dialog.cpp:92
 msgid "Add new contact"
-msgstr ""
+msgstr "Engadir un novo contacto"
 
 #: Widgets/add-contact-dialog.cpp:122
 msgid "No account selected."
-msgstr ""
+msgstr "Non se escolleu ningunha conta."
 
 #: Widgets/add-contact-dialog.cpp:124
 msgid ""
 "The requested account has been disconnected and so the contact could not be "
 "added."
 msgstr ""
+"A conta solicitada desconectouse, polo que non se puido engadir o contacto."
 
 #: Widgets/add-contact-dialog.cpp:127
 msgid "You did not specify the name of the contact to add."
-msgstr ""
+msgstr "Non indicou o nome do contacto para engadir."
 
 #: Widgets/add-contact-dialog.cpp:153
 msgid "Failed to create new contact."
-msgstr ""
+msgstr "Non foi posíbel crear o novo contacto."
 
 #: Widgets/add-contact-dialog.cpp:170
 msgid "Failed to request presence subscription from the requested contact."
-msgstr ""
+msgstr "Non foi posíbel solicitar subscribirse á presenza do contacto."
 
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: Widgets/add-contact-dialog.ui:17
 msgid "Account:"
-msgstr ""
+msgstr "Conta:"
 
 #. i18n: ectx: property (text), widget (QLabel, label_2)
 #: Widgets/add-contact-dialog.ui:27
 msgid "Screen Name:"
-msgstr ""
+msgstr "Alcume:"
 
 #: Widgets/contact-grid-dialog.cpp:139
 msgid "Search in Contacts..."
-msgstr ""
-
-#~ msgctxt "Verbose user visible error string"
-#~ msgid "Congratulate yourself - you just reached an impossible situation"
-#~ msgstr "Parabéns - chegou a unha situación imposíbel"
-
-#, fuzzy
-#~ msgctxt "Verbose user visible error string"
-#~ msgid "You apparently do not exist"
-#~ msgstr "Aparentemente, vostede non existe"
-
-#~ msgctxt "Short user visible error string"
-#~ msgid "Unknown handle"
-#~ msgstr "Descoñécese este xestor"
-
-#~ msgctxt "Short user visible error string"
-#~ msgid "Contact incapable"
-#~ msgstr "O contacto non é capaz"
-
-#~ msgctxt "Verbose user visible error string"
-#~ msgid "You apparently do not exist "
-#~ msgstr "Aparentemente, vostede non existe"
+msgstr "Buscar nos contactos…"
