--- a/po/lt/ktp-common-internals.po
+++ b/po/lt/ktp-common-internals.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: l 10n\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2012-09-20 12:42+0200\n"
-"PO-Revision-Date: 2012-08-05 23:48+0300\n"
+"PO-Revision-Date: 2012-10-28 15:16+0200\n"
 "Last-Translator: Liudas Ališauskas <liudas.alisauskas@gmail.com>\n"
 "Language-Team: Lithuanian <kde-i18n-lt@kde.org>\n"
 "Language: lt\n"
@@ -425,7 +425,7 @@ msgstr ""
 #: error-dictionary.cpp:194
 msgctxt "Short user visible error string"
 msgid "User does not exist"
-msgstr ""
+msgstr "Naudotojas neegzistuoja"
 
 #: error-dictionary.cpp:196
 msgctxt "Short user visible error string"
@@ -559,33 +559,32 @@ msgstr "Nesugrupuoti"
 #: presence.cpp:95
 msgctxt "IM presence: a person is available"
 msgid "Available"
-msgstr "Prisijungęs (-usi)"
+msgstr "Pasiekiamas"
 
 #: presence.cpp:97
 msgctxt "IM presence: a person is busy"
 msgid "Busy"
-msgstr "Užimtas (-a)"
+msgstr "Užimtas"
 
 #: presence.cpp:99
 msgctxt "IM presence: a person is away"
 msgid "Away"
-msgstr "Pasitraukęs (-usi)"
+msgstr "Pasitraukęs"
 
 #: presence.cpp:101
-#, fuzzy
 msgctxt "IM presence: a person is not available"
 msgid "Not Available"
-msgstr "Neprieinamas (-a)"
+msgstr "Nepasiekiamas"
 
 #: presence.cpp:103
 msgctxt "IM presence: a person is invisible"
 msgid "Invisible"
-msgstr "Nematomas (-a)"
+msgstr "Nematomas"
 
 #: presence.cpp:105
 msgctxt "IM presence: a person is offline"
 msgid "Offline"
-msgstr "Atsijungęs (-usi)"
+msgstr "Atsijungęs"
 
 #: telepathy-handler-application.cpp:113
 msgid "Persistent mode (do not exit on timeout)"
@@ -597,15 +596,15 @@ msgstr ""
 
 #: telepathy-handler-application.cpp:115
 msgid "KDE Telepathy"
-msgstr "KDE Telepatija"
+msgstr "KDE Telepathy"
 
 #: Widgets/add-contact-dialog.cpp:92
 msgid "Add new contact"
-msgstr ""
+msgstr "Pridėti naują kontaktą"
 
 #: Widgets/add-contact-dialog.cpp:122
 msgid "No account selected."
-msgstr ""
+msgstr "Nepažymėta kontaktų."
 
 #: Widgets/add-contact-dialog.cpp:124
 msgid ""
@@ -619,7 +618,7 @@ msgstr ""
 
 #: Widgets/add-contact-dialog.cpp:153
 msgid "Failed to create new contact."
-msgstr ""
+msgstr "Nepavyko sukurti naujo kontakto."
 
 #: Widgets/add-contact-dialog.cpp:170
 msgid "Failed to request presence subscription from the requested contact."
