--- a/po/nb/ktp-common-internals.po
+++ b/po/nb/ktp-common-internals.po
@@ -6,14 +6,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2012-09-20 12:42+0200\n"
-"PO-Revision-Date: 2012-03-09 12:39+0100\n"
+"PO-Revision-Date: 2012-11-22 19:14+0100\n"
 "Last-Translator: Bjørn Steensrud <bjornst@skogkatt.homelinux.org>\n"
 "Language-Team: Norwegian Bokmål <i18n-nb@lister.ping.uio.no>\n"
 "Language: nb\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Lokalize 1.2\n"
+"X-Generator: Lokalize 1.4\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Environment: kde\n"
 "X-Accelerator-Marker: &\n"
@@ -143,7 +143,7 @@ msgstr "Du er sparket ut av kanalen"
 #: error-dictionary.cpp:75
 msgctxt "Verbose user visible error string"
 msgid "An unexpected error has occurred"
-msgstr ""
+msgstr "Det oppsto en uventet feil"
 
 #: error-dictionary.cpp:77
 msgctxt "Verbose user visible error string"
@@ -177,12 +177,12 @@ msgstr "Du er blitt frakoblet"
 #: error-dictionary.cpp:87
 msgctxt "Verbose user visible error string"
 msgid "Selected user does not exist"
-msgstr ""
+msgstr "Den valgte brukeren finnes ikke"
 
 #: error-dictionary.cpp:89
 msgctxt "Verbose user visible error string"
 msgid "Emergency calls are not supported"
-msgstr ""
+msgstr "Nødanrop er ikke støttet"
 
 #: error-dictionary.cpp:91
 msgctxt "Verbose user visible error string"
@@ -244,7 +244,7 @@ msgstr ""
 #: error-dictionary.cpp:113
 msgctxt "Verbose user visible error string"
 msgid "This operation is unavailable for offline contacts"
-msgstr ""
+msgstr "Denne handlingen er ikke tilgjengelig for kontakter som er frakoblet"
 
 #: error-dictionary.cpp:115
 msgctxt "Verbose user visible error string"
@@ -295,6 +295,8 @@ msgid ""
 "The installed libraries are too old. Please try updating all Telepathy "
 "packages to a newer version"
 msgstr ""
+"De installerte bibliotekene er for gamle. Forsøk å oppdatere alle Telepathy-"
+"pakker til en nyere versjon"
 
 #: error-dictionary.cpp:131
 msgctxt "Verbose user visible error string"
@@ -306,11 +308,13 @@ msgctxt "Verbose user visible error string"
 msgid ""
 "This operation can not be finished as it would break your requested anonymity"
 msgstr ""
+"Denne handlingen kan ikke fullføres fordi det ville bryte mot ditt ønske om "
+"anonymitet"
 
 #: error-dictionary.cpp:135
 msgctxt "Verbose user visible error string"
 msgid "Some of the IM components are not working correctly"
-msgstr ""
+msgstr "Noen av lynmeldingskomponentene virker ikke riktig"
 
 #: error-dictionary.cpp:137
 #, kde-format
@@ -446,7 +450,7 @@ msgstr "Frakoblet"
 #: error-dictionary.cpp:194
 msgctxt "Short user visible error string"
 msgid "User does not exist"
-msgstr ""
+msgstr "Brukeren finnes ikke"
 
 #: error-dictionary.cpp:196
 msgctxt "Short user visible error string"
@@ -471,7 +475,7 @@ msgstr "Ugyldig argument"
 #: error-dictionary.cpp:204
 msgctxt "Short user visible error string"
 msgid "Invalid handle"
-msgstr ""
+msgstr "Ugyldig kallenavn"
 
 #: error-dictionary.cpp:206
 msgctxt "Short user visible error string"
@@ -491,7 +495,7 @@ msgstr "Muligheten er ikke tilgjengelig"
 #: error-dictionary.cpp:212
 msgctxt "Short user visible error string"
 msgid "Contact has no support"
-msgstr ""
+msgstr "Det er ingen støtte for kontakten"
 
 #: error-dictionary.cpp:214
 msgctxt "Short user visible error string"
@@ -621,29 +625,33 @@ msgstr "KDE Telepathy"
 
 #: Widgets/add-contact-dialog.cpp:92
 msgid "Add new contact"
-msgstr ""
+msgstr "Legg til ny kontakt"
 
 #: Widgets/add-contact-dialog.cpp:122
 msgid "No account selected."
-msgstr ""
+msgstr "Ingen konto er valgt."
 
 #: Widgets/add-contact-dialog.cpp:124
 msgid ""
 "The requested account has been disconnected and so the contact could not be "
 "added."
 msgstr ""
+"Den kontoen det spørres etter er frakoblet, så kontakten kunne ikke legges "
+"til."
 
 #: Widgets/add-contact-dialog.cpp:127
 msgid "You did not specify the name of the contact to add."
-msgstr ""
+msgstr "Du har ikke oppgitt navnet på den kontakten som skal legges til."
 
 #: Widgets/add-contact-dialog.cpp:153
 msgid "Failed to create new contact."
-msgstr ""
+msgstr "Klarte ikke å opprette ny kontakt."
 
 #: Widgets/add-contact-dialog.cpp:170
 msgid "Failed to request presence subscription from the requested contact."
 msgstr ""
+"Klarte ikke å be om abonnement på tilstedeværelse fra den forespurte "
+"kontakten."
 
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: Widgets/add-contact-dialog.ui:17
@@ -653,8 +661,8 @@ msgstr "Konto:"
 #. i18n: ectx: property (text), widget (QLabel, label_2)
 #: Widgets/add-contact-dialog.ui:27
 msgid "Screen Name:"
-msgstr ""
+msgstr "Visningsnavn:"
 
 #: Widgets/contact-grid-dialog.cpp:139
 msgid "Search in Contacts..."
-msgstr ""
+msgstr "Søk i kontakter …"
