--- a/po/sr@latin/ktp-common-internals.po
+++ b/po/sr@latin/ktp-common-internals.po
@@ -1,6 +1,6 @@
 # Translation of ktp-common-internals.po into Serbian.
 # Mladen Pejakovic <pejakm@gmail.com>, 2012.
-# Chusslove Illich <caslav.ilic@gmx.net>, 2012.
+# Chusslove Illich <caslav.ilic@gmx.net>, 2012, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: ktp-common-internals\n"
