--- a/po/zh_CN/ktp-common-internals.po
+++ b/po/zh_CN/ktp-common-internals.po
@@ -2,302 +2,303 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Ni Hui <shuizhuyuanluo@126.com>, 2012.
+# Weng Xuetian <wengxt@gmail.com>, 2013.
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
 "POT-Creation-Date: 2012-09-20 12:42+0200\n"
-"PO-Revision-Date: 2012-01-22 15:12+0800\n"
-"Last-Translator: Ni Hui <shuizhuyuanluo@126.com>\n"
+"PO-Revision-Date: 2013-01-12 11:44-0500\n"
+"Last-Translator: Weng Xuetian <wengxt@gmail.com>\n"
 "Language-Team: Chinese Simplified <kde-china@kde.org>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Lokalize 1.4\n"
+"X-Generator: Lokalize 1.5\n"
 
 #: error-dictionary.cpp:37
 msgctxt "Verbose user visible error string"
 msgid ""
 "Looks like you are already connected from other location and the server does "
 "not allow multiple connections"
-msgstr ""
+msgstr "似乎您已从其它位置连接了服务器，但此服务器不允许多个连接"
 
 #: error-dictionary.cpp:39
 msgctxt "Verbose user visible error string"
 msgid "Authentication of your account failed (is your password correct?)"
-msgstr ""
+msgstr "账号验证失败 (您的密码是否正确？)"
 
 #: error-dictionary.cpp:41
 msgctxt "Verbose user visible error string"
 msgid ""
 "The channel is too busy now to process your request. Try again in a few "
 "minutes"
-msgstr ""
+msgstr "频道正忙，无法处理您的请求。请稍等几分钟后再试一次"
 
 #: error-dictionary.cpp:43
 msgctxt "Verbose user visible error string"
 msgid "The connection was canceled on your request"
-msgstr ""
+msgstr "连接已按您的要求取消"
 
 #: error-dictionary.cpp:45
 msgctxt "Verbose user visible error string"
 msgid "The SSL/TLS certificate received from server is expired"
-msgstr ""
+msgstr "从服务器收到的 SSL/TLS 证书已过期"
 
 #: error-dictionary.cpp:47
 msgctxt "Verbose user visible error string"
 msgid ""
 "The SSL/TLS certificate received from server has different fingerprint than "
 "expected"
-msgstr ""
+msgstr "从服务器收到的 SSL/TLS 证书的指纹与预期不同"
 
 #: error-dictionary.cpp:49
 msgctxt "Verbose user visible error string"
 msgid ""
 "The SSL/TLS certificate received from server has different hostname than "
 "expected"
-msgstr ""
+msgstr "从服务器收到的 SSL/TLS 证书的主机名与预期不同"
 
 #: error-dictionary.cpp:51
 msgctxt "Verbose user visible error string"
 msgid "The SSL/TLS certificate received from server uses too weak encryption"
-msgstr ""
+msgstr "从服务器收到的 SSL/TLS 证书的加密太弱"
 
 #: error-dictionary.cpp:53
 msgctxt "Verbose user visible error string"
 msgid "The SSL/TLS certificate received from server is invalid"
-msgstr ""
+msgstr "从服务器收到的 SSL/TLS 证书无效"
 
 #: error-dictionary.cpp:55
 msgctxt "Verbose user visible error string"
 msgid "The SSL/TLS certificate received from server has exceeded length limit"
-msgstr ""
+msgstr "从服务器收到的 SSL/TLS 证书超过长度限制"
 
 #: error-dictionary.cpp:57
 msgctxt "Verbose user visible error string"
 msgid "The SSL/TLS certificate received from server has not been activated yet"
-msgstr ""
+msgstr "从服务器收到的 SSL/TLS 证书尚未激活"
 
 #: error-dictionary.cpp:59
 msgctxt "Verbose user visible error string"
 msgid "The server did not provide any SSL/TLS certificate"
-msgstr ""
+msgstr "服务器未提供任何 SSL/TLS 证书"
 
 #: error-dictionary.cpp:61
 msgctxt "Verbose user visible error string"
 msgid "The SSL/TLS certificate received from server has been revoked"
-msgstr ""
+msgstr "从服务器收到的 SSL/TLS 证书已被废除"
 
 #: error-dictionary.cpp:63
 msgctxt "Verbose user visible error string"
 msgid ""
 "The SSL/TLS certificate received from server was self-signed by the server "
 "and is untrusted"
-msgstr ""
+msgstr "从服务器收到的 SSL/TLS 证书由该服务器自签名并且不被信任"
 
 #: error-dictionary.cpp:65
 msgctxt "Verbose user visible error string"
 msgid ""
 "The SSL/TLS certificate received from server was not signed by a trusted "
 "certificate authority"
-msgstr ""
+msgstr "从服务器收到的 SSL/TLS 证书未由一个受信任的认证机构签名"
 
 #: error-dictionary.cpp:67
 msgctxt "Verbose user visible error string"
 msgid "You have been banned from the channel"
-msgstr ""
+msgstr "您已被频道屏蔽"
 
 #: error-dictionary.cpp:69
 msgctxt "Verbose user visible error string"
 msgid "The channel is full"
-msgstr ""
+msgstr "频道已满员"
 
 #: error-dictionary.cpp:71
 msgctxt "Verbose user visible error string"
 msgid "The channel is invite-only"
-msgstr ""
+msgstr "频道只接受邀请"
 
 #: error-dictionary.cpp:73
 msgctxt "Verbose user visible error string"
 msgid "You have been kicked from the channel"
-msgstr ""
+msgstr "您已经被踢出频道"
 
 #: error-dictionary.cpp:75
 msgctxt "Verbose user visible error string"
 msgid "An unexpected error has occurred"
-msgstr ""
+msgstr "发生未知错误"
 
 #: error-dictionary.cpp:77
 msgctxt "Verbose user visible error string"
 msgid "Could not establish connection"
-msgstr ""
+msgstr "无法建立连接"
 
 #: error-dictionary.cpp:79
 msgctxt "Verbose user visible error string"
 msgid "Connection to server was lost"
-msgstr ""
+msgstr "到服务器的连接已丢失"
 
 #: error-dictionary.cpp:81
 msgctxt "Verbose user visible error string"
 msgid "Server refused your connection"
-msgstr ""
+msgstr "服务器拒绝了您的连接"
 
 #: error-dictionary.cpp:83
 msgctxt "Verbose user visible error string"
 msgid ""
 "Somewhere there is another client connecting with your account and your "
 "current connection is lost"
-msgstr ""
+msgstr "别处有另一客户端正在连接您的帐号，您当前的连接已经丢失"
 
 #: error-dictionary.cpp:85
 msgctxt "Verbose user visible error string"
 msgid "You have been disconnected"
-msgstr ""
+msgstr "您已经断开了连接"
 
 #: error-dictionary.cpp:87
 msgctxt "Verbose user visible error string"
 msgid "Selected user does not exist"
-msgstr ""
+msgstr "所选用户不存在"
 
 #: error-dictionary.cpp:89
 msgctxt "Verbose user visible error string"
 msgid "Emergency calls are not supported"
-msgstr ""
+msgstr "不支持紧急呼叫"
 
 #: error-dictionary.cpp:91
 msgctxt "Verbose user visible error string"
 msgid "An encryption error has occurred"
-msgstr ""
+msgstr "发生了一个加密错误"
 
 #: error-dictionary.cpp:93
 msgctxt "Verbose user visible error string"
 msgid "Requested encryption is not available"
-msgstr ""
+msgstr "请求的加密不可用"
 
 #: error-dictionary.cpp:95
 msgctxt "Verbose user visible error string"
 msgid "An invalid argument was provided"
-msgstr ""
+msgstr "提供了无效的参数"
 
 #: error-dictionary.cpp:97
 msgctxt "Verbose user visible error string"
 msgid "The specified handle is unknown on this channel"
-msgstr ""
+msgstr "指定的处理在此频道上未知"
 
 #: error-dictionary.cpp:99
 msgctxt "Verbose user visible error string"
 msgid "There appears to be a problem with your network, check your connection"
-msgstr ""
+msgstr "似乎您的网络有问题。请检查您的连接"
 
 #: error-dictionary.cpp:101
 msgctxt "Verbose user visible error string"
 msgid "You were removed from the channel because you did not respond"
-msgstr ""
+msgstr "由于没有回应您已被移除出频道"
 
 #: error-dictionary.cpp:103
 msgctxt "Verbose user visible error string"
 msgid "This capability is not available"
-msgstr ""
+msgstr "功能不可用"
 
 #: error-dictionary.cpp:105
 msgctxt "Verbose user visible error string"
 msgid "The contact does not have the requested capabilities"
-msgstr ""
+msgstr "该联系人没有所请求的功能"
 
 #: error-dictionary.cpp:107
 msgctxt "Verbose user visible error string"
 msgid "This operation is not implemented"
-msgstr ""
+msgstr "该操作未实现"
 
 #: error-dictionary.cpp:109
 msgctxt "Verbose user visible error string"
 msgid "This operation is not yet implemented"
-msgstr ""
+msgstr "该操作尚未实现"
 
 #: error-dictionary.cpp:111
 msgctxt "Verbose user visible error string"
 msgid "The requested channel is already being handled by some other process"
-msgstr ""
+msgstr "请求的频道已被其他的进程处理"
 
 #: error-dictionary.cpp:113
 msgctxt "Verbose user visible error string"
 msgid "This operation is unavailable for offline contacts"
-msgstr ""
+msgstr "此操作对离线联系人不可用"
 
 #: error-dictionary.cpp:115
 msgctxt "Verbose user visible error string"
 msgid "You are not permitted to perform this operation"
-msgstr ""
+msgstr "您未被允许进行此操作"
 
 #: error-dictionary.cpp:117
 msgctxt "Verbose user visible error string"
 msgid "Current call was picked up by another resource"
-msgstr ""
+msgstr "当前通话已由其他资源接听"
 
 #: error-dictionary.cpp:119
 msgctxt "Verbose user visible error string"
 msgid "Account with this username already exists"
-msgstr ""
+msgstr "此用户名的账号已经存在"
 
 #: error-dictionary.cpp:121
 msgctxt "Verbose user visible error string"
 msgid "The receiver rejected your call"
-msgstr ""
+msgstr "接收者拒绝了您的通话"
 
 #: error-dictionary.cpp:123
 msgctxt "Verbose user visible error string"
 msgid ""
 "There are insufficient resources (like free memory) to finish the operation "
 "at the moment"
-msgstr ""
+msgstr "当前没有足够的资源 (比如空闲内存) 来完成操作"
 
 #: error-dictionary.cpp:125
 msgctxt "Verbose user visible error string"
 msgid ""
 "Your request hit a busy resource somewhere along the way and the operation "
 "was unable to finish"
-msgstr ""
+msgstr "您请求了一个在正处繁忙的资源，此操作未能成功完成"
 
 #: error-dictionary.cpp:127
 msgctxt "Verbose user visible error string"
 msgid "An internal error has occurred (known as the 'Confused service error')"
-msgstr ""
+msgstr "发生了一个内部错误 (被称为“令人困惑的服务错误”)"
 
 #: error-dictionary.cpp:129
 msgctxt "Verbose user visible error string"
 msgid ""
 "The installed libraries are too old. Please try updating all Telepathy "
 "packages to a newer version"
-msgstr ""
+msgstr "安装的库过旧。请尝试升级所有 Telepathy 的包至更新的版本"
 
 #: error-dictionary.cpp:131
 msgctxt "Verbose user visible error string"
 msgid "The channel was terminated for no apparent reason"
-msgstr ""
+msgstr "该频道由于不明理由被终止"
 
 #: error-dictionary.cpp:133
 msgctxt "Verbose user visible error string"
 msgid ""
 "This operation can not be finished as it would break your requested anonymity"
-msgstr ""
+msgstr "此操作无法完成，它可能破坏您要求的匿名性"
 
 #: error-dictionary.cpp:135
 msgctxt "Verbose user visible error string"
 msgid "Some of the IM components are not working correctly"
-msgstr ""
+msgstr "一些 IM 组建未正常工作"
 
 #: error-dictionary.cpp:137
 #, kde-format
 msgctxt "User visible error string"
 msgid "An unknown error was encountered (%1), please report this"
-msgstr ""
+msgstr "发生了未知错误 (%1)，请报告"
 
 #: error-dictionary.cpp:144
 msgctxt "Short user visible error string"
 msgid "Connected elsewhere"
-msgstr ""
+msgstr "在别处已连接"
 
 #: error-dictionary.cpp:146
 msgctxt "Short user visible error string"
@@ -307,102 +308,102 @@ msgstr "验证失败"
 #: error-dictionary.cpp:148
 msgctxt "Short user visible error string"
 msgid "Channel too busy"
-msgstr ""
+msgstr "频道忙"
 
 #: error-dictionary.cpp:150
 msgctxt "Short user visible error string"
 msgid "Cancelled by user"
-msgstr ""
+msgstr "已被用户取消"
 
 #: error-dictionary.cpp:152
 msgctxt "Short user visible error string"
 msgid "Certificate is expired"
-msgstr ""
+msgstr "证书已过期"
 
 #: error-dictionary.cpp:154
 msgctxt "Short user visible error string"
 msgid "Wrong certificate fingerprint"
-msgstr ""
+msgstr "错误的证书指纹"
 
 #: error-dictionary.cpp:156
 msgctxt "Short user visible error string"
 msgid "Wrong certificate hostname"
-msgstr ""
+msgstr "错误的证书域名"
 
 #: error-dictionary.cpp:158
 msgctxt "Short user visible error string"
 msgid "Too weak certificate encryption"
-msgstr ""
+msgstr "证书加密太弱"
 
 #: error-dictionary.cpp:160
 msgctxt "Short user visible error string"
 msgid "Invalid certificate"
-msgstr ""
+msgstr "无效的证书"
 
 #: error-dictionary.cpp:162
 msgctxt "Short user visible error string"
 msgid "Certificate length limit exceeded"
-msgstr ""
+msgstr "证书长度超过上限"
 
 #: error-dictionary.cpp:164
 msgctxt "Short user visible error string"
 msgid "Certificate not yet active"
-msgstr ""
+msgstr "证书未激活"
 
 #: error-dictionary.cpp:166
 msgctxt "Short user visible error string"
 msgid "No certificate from server"
-msgstr ""
+msgstr "服务器未提供证书"
 
 #: error-dictionary.cpp:168
 msgctxt "Short user visible error string"
 msgid "Certificate revoked"
-msgstr ""
+msgstr "证书已被吊销"
 
 #: error-dictionary.cpp:170
 msgctxt "Short user visible error string"
 msgid "Untrusted self-signed certificate"
-msgstr ""
+msgstr "不信任的自签署证书"
 
 #: error-dictionary.cpp:172
 msgctxt "Short user visible error string"
 msgid "Untrusted certificate"
-msgstr ""
+msgstr "不信任的证书"
 
 #: error-dictionary.cpp:174
 msgctxt "Short user visible error string"
 msgid "Banned from channel"
-msgstr ""
+msgstr "被频道屏蔽"
 
 #: error-dictionary.cpp:176
 msgctxt "Short user visible error string"
 msgid "The channel is full"
-msgstr ""
+msgstr "频道已满员"
 
 #: error-dictionary.cpp:178
 msgctxt "Short user visible error string"
 msgid "The channel is invite-only"
-msgstr ""
+msgstr "频道只接受邀请"
 
 #: error-dictionary.cpp:180
 msgctxt "Short user visible error string"
 msgid "Kicked from channel"
-msgstr ""
+msgstr "从频道中被踢出"
 
 #: error-dictionary.cpp:182
 msgctxt "Short user visible error string"
 msgid "Something's seriously wrong"
-msgstr ""
+msgstr "出现严重错误"
 
 #: error-dictionary.cpp:184
 msgctxt "Short user visible error string"
 msgid "Connection failed"
-msgstr ""
+msgstr "连接失败"
 
 #: error-dictionary.cpp:186
 msgctxt "Short user visible error string"
 msgid "Connection lost"
-msgstr ""
+msgstr "连接已丢失"
 
 #: error-dictionary.cpp:188
 msgctxt "Short user visible error string"
@@ -412,7 +413,7 @@ msgstr "连接被拒绝"
 #: error-dictionary.cpp:190
 msgctxt "Short user visible error string"
 msgid "Connection stolen by other account"
-msgstr ""
+msgstr "连接被其他账户偷取"
 
 #: error-dictionary.cpp:192
 msgctxt "Short user visible error string"
@@ -422,12 +423,12 @@ msgstr "已断开"
 #: error-dictionary.cpp:194
 msgctxt "Short user visible error string"
 msgid "User does not exist"
-msgstr ""
+msgstr "用户不存在"
 
 #: error-dictionary.cpp:196
 msgctxt "Short user visible error string"
 msgid "Emergency calls unsupported"
-msgstr ""
+msgstr "不支持紧急呼叫"
 
 #: error-dictionary.cpp:198
 msgctxt "Short user visible error string"
@@ -445,12 +446,9 @@ msgid "Invalid argument"
 msgstr "无效参数"
 
 #: error-dictionary.cpp:204
-#, fuzzy
-#| msgctxt "Short user visible error string"
-#| msgid "Invalid argument"
 msgctxt "Short user visible error string"
 msgid "Invalid handle"
-msgstr "无效参数"
+msgstr "无效处理"
 
 #: error-dictionary.cpp:206
 msgctxt "Short user visible error string"
@@ -460,17 +458,17 @@ msgstr "网络错误"
 #: error-dictionary.cpp:208
 msgctxt "Short user visible error string"
 msgid "Removed from channel"
-msgstr ""
+msgstr "从频道移除"
 
 #: error-dictionary.cpp:210
 msgctxt "Short user visible error string"
 msgid "Capability not available"
-msgstr ""
+msgstr "功能不可用"
 
 #: error-dictionary.cpp:212
 msgctxt "Short user visible error string"
 msgid "Contact has no support"
-msgstr ""
+msgstr "联系人不支持"
 
 #: error-dictionary.cpp:214
 msgctxt "Short user visible error string"
@@ -485,7 +483,7 @@ msgstr "该操作还未实现"
 #: error-dictionary.cpp:218
 msgctxt "Short user visible error string"
 msgid "Channel already being handled"
-msgstr ""
+msgstr "频道已被处理"
 
 #: error-dictionary.cpp:220
 msgctxt "Short user visible error string"
@@ -500,7 +498,7 @@ msgstr "操作不允许"
 #: error-dictionary.cpp:224
 msgctxt "Short user visible error string"
 msgid "Call picked by other resource"
-msgstr ""
+msgstr "通话已由其他资源接听"
 
 #: error-dictionary.cpp:226
 msgctxt "Short user visible error string"
@@ -520,7 +518,7 @@ msgstr "资源不足"
 #: error-dictionary.cpp:232
 msgctxt "Short user visible error string"
 msgid "Service is busy"
-msgstr ""
+msgstr "服务忙"
 
 #: error-dictionary.cpp:234
 msgctxt "Short user visible error string"
@@ -530,17 +528,17 @@ msgstr "内部错误"
 #: error-dictionary.cpp:236
 msgctxt "Short user visible error string"
 msgid "Software upgrade required"
-msgstr ""
+msgstr "软件需要更新"
 
 #: error-dictionary.cpp:238
 msgctxt "Short user visible error string"
 msgid "Channel terminated"
-msgstr ""
+msgstr "频道已中断"
 
 #: error-dictionary.cpp:240
 msgctxt "Short user visible error string"
 msgid "Anonymity break possible"
-msgstr ""
+msgstr "可能破坏匿名性"
 
 #: error-dictionary.cpp:242
 msgctxt "Short user visible error string"
@@ -554,7 +552,7 @@ msgstr "未知错误"
 
 #: Models/groups-model-item.cpp:73
 msgid "Ungrouped"
-msgstr ""
+msgstr "未分组"
 
 #: presence.cpp:95
 msgctxt "IM presence: a person is available"
@@ -572,7 +570,6 @@ msgid "Away"
 msgstr "离开"
 
 #: presence.cpp:101
-#, fuzzy
 msgctxt "IM presence: a person is not available"
 msgid "Not Available"
 msgstr "不可用"
@@ -601,29 +598,29 @@ msgstr "KDE Telepathy"
 
 #: Widgets/add-contact-dialog.cpp:92
 msgid "Add new contact"
-msgstr ""
+msgstr "添加新联系人"
 
 #: Widgets/add-contact-dialog.cpp:122
 msgid "No account selected."
-msgstr ""
+msgstr "没有选择账户。"
 
 #: Widgets/add-contact-dialog.cpp:124
 msgid ""
 "The requested account has been disconnected and so the contact could not be "
 "added."
-msgstr ""
+msgstr "请求的帐号已断开连接因此无法加入联系人。"
 
 #: Widgets/add-contact-dialog.cpp:127
 msgid "You did not specify the name of the contact to add."
-msgstr ""
+msgstr "您未指定要添加的联系人的名称。"
 
 #: Widgets/add-contact-dialog.cpp:153
 msgid "Failed to create new contact."
-msgstr ""
+msgstr "创建新联系人失败。"
 
 #: Widgets/add-contact-dialog.cpp:170
 msgid "Failed to request presence subscription from the requested contact."
-msgstr ""
+msgstr "向要求的联系人请求在线信息订阅失败"
 
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: Widgets/add-contact-dialog.ui:17
@@ -637,4 +634,4 @@ msgstr "显示名称："
 
 #: Widgets/contact-grid-dialog.cpp:139
 msgid "Search in Contacts..."
-msgstr ""
+msgstr "在联系人中搜索..."
