--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,11 @@
-ktp-common-internals (0.5.1-1) UNRELEASED; urgency=low
+ktp-common-internals (0.5.3-1) UNRELEASED; urgency=low
 
   * [02e74e7] Imported Upstream version 0.5.1
+  * [d0481a0] Imported Upstream version 0.5.3
+  * [81fd483] Bump version for build-dependency
+  * [369f60c] update sonames
 
- -- Ritesh Raj Sarraf <rrs@debian.org>  Wed, 28 Nov 2012 14:44:24 +0530
+ -- Ritesh Raj Sarraf <rrs@debian.org>  Wed, 20 Feb 2013 14:06:24 +0530
 
 ktp-common-internals (0.4.0-1) unstable; urgency=low
 
