--- a/po/kk/ktp-common-internals.po
+++ b/po/kk/ktp-common-internals.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2013-03-27 10:06+0100\n"
-"PO-Revision-Date: 2013-03-31 05:21+0600\n"
+"POT-Creation-Date: 2013-04-13 11:41+0200\n"
+"PO-Revision-Date: 2013-04-02 02:48+0600\n"
 "Last-Translator: Sairan Kikkarin <sairan@computer.org>\n"
 "Language-Team: Kazakh <kde-i18n-doc@kde.org>\n"
 "Language: kk\n"
@@ -25,59 +25,59 @@ msgctxt "EMAIL OF TRANSLATORS"
 msgid "Your emails"
 msgstr "sairan@computer.org"
 
-#: contact-info-dialog.cpp:67
+#: contact-info-dialog.cpp:66
 msgid "Full name:"
-msgstr ""
+msgstr "Толық аты:"
 
-#: contact-info-dialog.cpp:68
+#: contact-info-dialog.cpp:67
 msgid "Nickname:"
 msgstr "Бүркеншік аты:"
 
-#: contact-info-dialog.cpp:69
+#: contact-info-dialog.cpp:68
 msgid "Email:"
 msgstr "Эл.поштасы:"
 
-#: contact-info-dialog.cpp:70
+#: contact-info-dialog.cpp:69
 msgid "Phone:"
 msgstr "Телефоны:"
 
-#: contact-info-dialog.cpp:71
+#: contact-info-dialog.cpp:70
 msgid "Homepage:"
 msgstr "Мекен-парағы:"
 
-#: contact-info-dialog.cpp:72
+#: contact-info-dialog.cpp:71
 msgid "Birthday:"
 msgstr "Туған күні:"
 
-#: contact-info-dialog.cpp:73
+#: contact-info-dialog.cpp:72
 msgid "Organization:"
 msgstr "Ұйымы:"
 
-#: contact-info-dialog.cpp:152
+#: contact-info-dialog.cpp:140
 msgid "Change Avatar"
-msgstr ""
+msgstr "Аватарын өзгерту"
 
-#: contact-info-dialog.cpp:157
+#: contact-info-dialog.cpp:145
 msgid "Clear Avatar"
 msgstr "Аватарды кетіру"
 
-#: contact-info-dialog.cpp:237
+#: contact-info-dialog.cpp:210
 msgid "Failed to load the new avatar image"
 msgstr "Жаңа аватарды жүктеу жаңылысы."
 
-#: contact-info-dialog.cpp:353
+#: contact-info-dialog.cpp:328
 msgid "Save"
-msgstr ""
+msgstr "Сақтау"
 
-#: contact-info-dialog.cpp:393
+#: contact-info-dialog.cpp:363
 msgid "Contact can see when you are online:"
-msgstr ""
+msgstr "Контакт желіде екеніңізді көре алады:"
 
-#: contact-info-dialog.cpp:394
+#: contact-info-dialog.cpp:364
 msgid "You can see when the contact is online:"
-msgstr ""
+msgstr "Контакт желіде екенді көре аласыз:"
 
-#: contact-info-dialog.cpp:395
+#: contact-info-dialog.cpp:365
 msgid "Contact is blocked:"
 msgstr "Контакт бұғатталған:"
 
@@ -625,11 +625,11 @@ msgstr "Беймәлім қате"
 
 #: logs-importer-private.cpp:52
 msgid "No Kopete logs found"
-msgstr ""
+msgstr "Kopete журналы табылған жоқ"
 
 #: logs-importer-private.cpp:328 logs-importer-private.cpp:335
 msgid "Invalid Kopete log format"
-msgstr ""
+msgstr "Kopete журналы жарамсыз пішімде"
 
 #: Models/accounts-list-model.cpp:250
 msgctxt "This is a connection state"
@@ -665,7 +665,7 @@ msgstr "Пароль талап етілмейді"
 
 #: Models/rooms-model.cpp:94
 msgid "Member count"
-msgstr ""
+msgstr "Мүшелер саны"
 
 #: Models/rooms-model.cpp:114
 msgctxt "Chatrooms name"
@@ -761,11 +761,11 @@ msgstr "Контакттар арасында іздеу..."
 
 #: Widgets/join-chat-room-dialog.cpp:197
 msgid "This room is already in your favorites."
-msgstr ""
+msgstr "Бұл бөлме таңдамалыңыздарда бар екен."
 
 #: Widgets/join-chat-room-dialog.cpp:199
 msgid "Add room"
-msgstr ""
+msgstr "Бөлмені қосу"
 
 #: Widgets/join-chat-room-dialog.cpp:199
 msgid "Name"
@@ -774,12 +774,12 @@ msgstr "Атауы"
 #. i18n: ectx: property (windowTitle), widget (QWidget, JoinChatRoomDialog)
 #: Widgets/join-chat-room-dialog.ui:20
 msgid "Join Chatroom"
-msgstr ""
+msgstr "Әңгіме бөлмесініе кіру"
 
 #. i18n: ectx: property (text), widget (QLabel, label)
 #: Widgets/join-chat-room-dialog.ui:29
 msgid "Enter chat room:"
-msgstr ""
+msgstr "Кіретін әңгіме бөлме:"
 
 #. i18n: ectx: attribute (title), widget (QWidget, favoritesTab)
 #: Widgets/join-chat-room-dialog.ui:47
@@ -789,17 +789,17 @@ msgstr "Таңдамалылар"
 #. i18n: ectx: property (text), widget (QPushButton, addFavoritePushButton)
 #: Widgets/join-chat-room-dialog.ui:63
 msgid "Add Room"
-msgstr ""
+msgstr "Бөлмені қосу"
 
 #. i18n: ectx: property (text), widget (QPushButton, removeFavoritePushButton)
 #: Widgets/join-chat-room-dialog.ui:73
 msgid "Remove Room"
-msgstr ""
+msgstr "Бөлмені өшіру"
 
 #. i18n: ectx: attribute (title), widget (QWidget, recentTab)
 #: Widgets/join-chat-room-dialog.ui:98
 msgid "Recent"
-msgstr ""
+msgstr "Жуырдағы"
 
 #. i18n: ectx: property (text), widget (QPushButton, removeRecentPushButton)
 #: Widgets/join-chat-room-dialog.ui:112
@@ -815,17 +815,17 @@ msgstr "Тізімді тазалау"
 #. i18n: ectx: property (text), widget (QPushButton, queryPushButton)
 #: Widgets/join-chat-room-dialog.ui:145 Widgets/join-chat-room-dialog.ui:176
 msgid "Query"
-msgstr ""
+msgstr "Жеке әңгіме"
 
 #. i18n: ectx: property (text), widget (QLabel, serverLabel)
 #: Widgets/join-chat-room-dialog.ui:151
 msgid "Server to be queried:"
-msgstr ""
+msgstr "Сұрайтын сервері:"
 
 #. i18n: ectx: property (clickMessage), widget (KLineEdit, serverLineEdit)
 #: Widgets/join-chat-room-dialog.ui:163
 msgid "Leave blank for the selected account's default server"
-msgstr ""
+msgstr "Таңдалған тіркелгінін әдетті серверін қолдану үшін бос қалдырыңыз "
 
 #. i18n: ectx: property (text), widget (QPushButton, stopPushButton)
 #: Widgets/join-chat-room-dialog.ui:186
@@ -835,25 +835,25 @@ msgstr "Тоқтату"
 #. i18n: ectx: property (clickMessage), widget (KLineEdit, filterBar)
 #: Widgets/join-chat-room-dialog.ui:217
 msgid "Search rooms"
-msgstr ""
+msgstr "Бөлмелерде іздеу"
 
 #: Widgets/notificationconfigdialog.cpp:43
-#: Widgets/notificationconfigdialog.cpp:93
+#: Widgets/notificationconfigdialog.cpp:95
 #, kde-format
 msgid "Configure notifications for %1"
-msgstr ""
+msgstr "%1 құлақтандыруларын баптау"
 
 #: Widgets/notificationconfigdialog.cpp:51
 msgid "Configure notifications for"
-msgstr ""
+msgstr "Мына құлақтандыруларын баптау:"
 
 #: Widgets/notificationconfigdialog.cpp:56
 msgid "All users"
 msgstr "Бүкіл пайдаланушылар"
 
-#: Widgets/notificationconfigdialog.cpp:96
+#: Widgets/notificationconfigdialog.cpp:98
 msgid "Configure notifications for all users"
-msgstr ""
+msgstr "Бүкіл пайдаланушыларды құлақтандыруларын баптау"
 
 #~ msgid "Ungrouped"
 #~ msgstr "Ыдыралған"
